# NRVQA

./: pyproject.toml  setup.py
