[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NRVQA"
version = "1.0.0"
description = "Library for PIQE"
dependencies = []  # Závislosti, pokud nějaké máš

[tool.setuptools]
packages = {find = {"where": "src"}}  # Tohle říká setuptools, kde hledat balíčky
